--- a/flex_card.css
+++ b/flex_card.css
@@ -36,12 +36,11 @@ body {
   border-radius: 6px;
   margin: 20px;
   box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
   font-size: 20px;
 }
 .card:hover {
-  max-width: 400px;
-  max-height: 450px;
+  transform: translateY(-10px);
 }
 .card .card_image img {
   width: 100%;
@@ -62,7 +61,8 @@ body {
   color: #fff;
 }
 .card button:hover {
-  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+  box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+  cursor: pointer;
 }
 .card:nth-child(2) {
   background-color: rgb(98, 28, 98);
