--- a/flex_card.scss
+++ b/flex_card.scss
@@ -37,12 +37,11 @@ body {
   border-radius: 6px;
   margin: 20px;
   box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
   font-size: 20px;
 
   &:hover {
-    max-width: 400px;
-    max-height: 450px;
+    transform: translateY(-10px);
   }
 
   .card_image img {
@@ -68,7 +67,8 @@ body {
     color: #fff;
 
     &:hover {
-      box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+      box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+      cursor: pointer;
     }
   }
 
